# respeaker_ros2

./: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
cfg/: Respeaker.cfg
config/: 60-respeaker.rules
launch/: audio_with_doa.launch.py
msg/: AudioDataWithDOA.msg
respeaker_ros2/: audio_doa_publisher.py  package.xml  setup.py
respeaker_ros2/respeaker_ros2/: __init__.py
src/: audio_with_doa_publisher.py
src/respeaker_ros2/: __init__.py  audio_with_doa_publisher.py
