<?xml version="1.0"?>
<package format="3">
  <name>respeaker_ros2</name>
  <version>0.0.1</version>
  <description>ReSpeaker ROS 2 package for audio with DOA (Direction of Arrival)</description>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>std_msgs</build_depend>

  <!-- Executable dependencies -->
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_linter</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Export -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
