<?xml version="1.0"?>
<package format="3">
  <name>respeaker_ros2</name>
  <version>0.0.1</version>
  <description>
    ROS 2 package for ReSpeaker USB Microphone Array v2.0 to publish audio data and direction of arrival (DOA) information.
  </description>

  <maintainer email="jiseon.ki@example.com">Jiseon Ki</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>rclcpp</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
