<?xml version="1.0"?>
<package format="3">
  <name>respeaker_ros2</name>
  <version>0.0.0</version>
  <description>Hybrid package with custom msg and Python nodes</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <!-- Build tools and interface generation dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>   <!-- Enable Python in CMake build -->:contentReference[oaicite:4]{index=4}
  <build_depend>rosidl_default_generators</build_depend>    <!-- For generating interfaces -->:contentReference[oaicite:5]{index=5}
  <exec_depend>rosidl_default_runtime</exec_depend>         <!-- Runtime support for interfaces -->:contentReference[oaicite:6]{index=6}

  <!-- Dependencies for custom message -->
  <build_depend>std_msgs</build_depend>        <!-- e.g., message uses std_msgs/Header -->
  <exec_depend>std_msgs</exec_depend>

  <!-- Dependencies for Python nodes -->
  <exec_depend>rclpy</exec_depend>            <!-- Python ROS 2 client library -->:contentReference[oaicite:7]{index=7}

  <!-- Mark this package as an interface package (required for rosidl_generate_interfaces) -->
  <member_of_group>rosidl_interface_packages</member_of_group>:contentReference[oaicite:8]{index=8}

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
