[metadata]
name = respeaker_ros2
version = 0.0.1
description = ROS 2 package for ReSpeaker USB Microphone Array to publish audio data and DOA.
author = Jiseon Ki
author_email = jiseon.ki@example.com
license = Apache 2.0

[options]
packages = find:
install_requires =
    rclpy
    pyusb
    pyaudio
    numpy
    click

[options.entry_points]
console_scripts =
    audio_with_doa_node = respeaker_ros2.audio_with_doa_publisher:main
