[metadata]
name = respeaker_ros2
version = 0.0.1
description = ROS 2 package for ReSpeaker USB Microphone Array to publish audio data and DOA.
author = Jiseon Ki
author_email = jiseon.ki@example.com
license = Apache 2.0

[options]
packages = find:

[options.entry_points]
# Remove Python entry points since `ament_cmake` will handle Python executables.
