<?xml version="1.0"?>
<package format="3">
  <name>respeaker_ros2</name>
  <version>0.0.1</version>
  <description>ReSpeaker audio and DOA ROS 2 publisher</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
